fix z-index on imgs for blogArticle

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -118,8 +118,8 @@ a:focus-visible {
   outline-offset: 3px;
 }
 
-.section-page .content img {
-  z-index: 200;
+.section-page:not(.carte) .content img {
+  z-index: 1;
   position: relative;
 
   &:hover {
